Adjust copyright size and fix spacing

--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -7,7 +7,7 @@ footer {
 }
 
 .copy-space {
-  margin-bottom: 2em;
+  margin-bottom: 1.75em;
 }
 
 .location-space {
