--- a/css/type.css
+++ b/css/type.css
@@ -250,7 +250,7 @@ small,
 }
 
 .nano {
-  font-size: .8232rem;
+  font-size: .600rem;
   line-height: 1.3rem;
 }
 
